--- a/scripts2/0000_visualize_figures.Rmd
+++ b/scripts2/0000_visualize_figures.Rmd
@@ -14,6 +14,7 @@ library(sf)
 library(INLA)
 library(viridis)
 library(scales)
+library(lubridate)
 ```
 #### calculate N
 ```{r}
@@ -23,11 +24,13 @@ sa_adm1_weekly %>%
   group_by(province) %>%
   summarise(disease = sum(disease),
             disease_prop = (sum(disease)/59017)*100)
+sa_adm1_weekly <- sa_adm1_weekly
+sa_adm1_weekly2019 <- sa_adm1_weekly[which(sa_adm1_weekly$year<2020),]
 
 sum(sa_adm2_weekly$other_count)/sum(sa_adm2_weekly$disease)
 sum(c(sa_adm2_weekly$other_count,sa_adm2_weekly$bact_count,sa_adm2_weekly$mening_count))
 data2<- fread(file="/home/sbelman/Documents/env_sa_manuscript/input_datasets/disease/SA_disease_point_base.csv",quote=FALSE, header = TRUE)
-dattot <- data2[which(data2$year>2004)]
+dattot <- data2[which(data2$year>2004 & data2$year<2020)]
 
 ### grids per district
 shp<-st_read("/home/sbelman/Documents/env_sa_manuscript/input_datasets/shps/gadm41_namematch_ZAF_2.shp")
@@ -45,7 +48,7 @@ columns_of_interest <- grep("GPSC",colnames(sa_adm1_weekly),value=T)
 
 summary_table <- data.frame(
   sub_group = columns_of_interest,
-  count = colSums(sa_adm1_weekly[ , ..columns_of_interest], na.rm = TRUE)
+  count = colSums(sa_adm1_weekly2019[ , ..columns_of_interest], na.rm = TRUE)
 )
 summary_table[order(-summary_table$count), ]
 
@@ -717,7 +720,7 @@ dev.off()
 
 
 #####particular serotypes by age and year
-data23f4 <- subset(data2, data2$serotype%in%c("23F","4","8"))
+data23f4 <- subset(data2, data2$serotype%in%c("19F","23F","4","8"))
 ## group ages
 df_summary <- data23f4 %>%
   mutate(
@@ -740,6 +743,15 @@ agegroupsyearsero <- ggplot(df_summary, aes(x = year, y = count, color = age_gro
   theme_minimal() +
   theme(axis.text = element_text(size = 13), axis.title = element_text(size = 14), title = element_text(size=14))+
   facet_wrap(.~serotype )
+
+pdf("/home/sbelman/Documents/env_sa_manuscript/figures/supplement/age_group_serotypes.pdf", width = 8, height =6)
+print(agegroupsyearsero)
+dev.off()
+
+print(agegroupsyearsero)
+ggsave("/home/sbelman/Documents/env_sa_manuscript/figures/supplement/age_group_serotypes.png", width = 8, height =6)
+dev.off()
+
 ```
 
 #### FIGURE S2
@@ -1899,6 +1911,66 @@ table(data2[which(data2$serotype=="4")]$GPSC)/sum(table(data2[which(data2$seroty
 table(data2[which(data2$serotype=="4")]$GPSC)
 
 ```
+
+#### Proportion of GPSC 21 over space and time
+```{r}
+data2<- fread(file="/home/sbelman/Documents/env_sa_manuscript/input_datasets/disease/SA_disease_point_base.csv",quote=FALSE, header = TRUE)
+# Convert date to week start (ISO week)
+data2 <- data2 %>% 
+  mutate(week = floor_date(date, "week"))
+# Summarise total sequenced & GPSC21 count per province per week
+      weekly_data <- data2 %>%
+        filter(year > 2004 & year<2020) %>%
+        group_by(week, province) %>%
+        summarise(
+          total_seq = sum(sequenced, na.rm = TRUE),
+          gpsc21_seq = sum(ifelse(GPSC == "21", sequenced, 0), na.rm = TRUE),
+          gpsc1_seq = sum(ifelse(GPSC == "1", sequenced, 0), na.rm = TRUE),
+          .groups = "drop"
+        ) %>%
+        mutate(prop_gpsc21 = gpsc21_seq / total_seq,
+               prop_gpsc1 = gpsc1_seq / total_seq)
+      
+      ### make sure 0's and NAs are different
+      weekly_data2 <- weekly_data %>%
+        mutate(prop_gpsc21plot = ifelse(total_seq == 0, NA, prop_gpsc21),
+               prop_gpsc1plot = ifelse(total_seq == 0, NA, prop_gpsc1))
+      
+      plotgpsc21 <- ggplot(weekly_data2, aes(x = week, y = prop_gpsc21plot, size = prop_gpsc21plot, colour = prop_gpsc21plot)) +
+          geom_point(alpha = 0.8) +
+          scale_colour_gradientn(colours = c("#d6e9f9", "#4a7bd0", "#8b2f8c", "#d7191c"),values = scales::rescale(c(0, 0.25, 0.6, 1)),limits = c(0, 1),name = "Proportion GPSC21")+
+          scale_size(range = c(1, 8),limits = c(0, 1),name = "Proportion GPSC21") +
+          scale_x_date(date_breaks = "5 years", date_labels = "%Y") +
+          facet_wrap(~ province, ncol = 3, strip.position = "top") +
+          labs(x = "Week", y = "Proportion GPSC21") +
+          theme_classic(base_size = 13) +
+          ylim(0,1.3)+
+          theme(
+            strip.background = element_blank(),
+            axis.text.x = element_text(angle = 45, hjust = 1, size =12),
+            legend.box = "vertical",
+            legend.position = "right"
+          ) +
+          guides(colour = guide_legend(override.aes = list(size = c(3, 6, 9, 12, 15))),size = "none")
+      
+      
+pdf(file="/home/sbelman/Documents/env_sa_manuscript/figures/figure5/proportionsGPSC21.pdf", width = 8,height=4)
+print(plotgpsc21)
+dev.off()
+
+print(plotgpsc21)
+ggsave(file="/home/sbelman/Documents/env_sa_manuscript/figures/figure5/proportionsGPSC21.png", width = 8,height=4)
+dev.off()
+
+```
+
+
+
+
+
+
+
+
  Altered Risk Serotype 14
 ```{r}
  plot_1 <- ggplot(fits_sero[which(fits_sero$GPSC=="Sero14"),])+
